syntax = "proto3";
package proto;
option go_package = "/proto";

service PerformanceService {
  rpc Exec(stream PerformanceExecReq) returns (stream PerformanceExecResult){};
}

message Processor {
  string name = 1;
}

message Scenario {
  string name = 1;
  repeated Processor processors = 2;
  int64 dur       = 3;
}

message Stage {
  int32 dur  = 1;
  int32 target = 2;
}

message PerformanceExecReq {
  string uuid = 1;
  string title = 2;

  string generateType = 3;
  repeated Stage stages = 4;

  int64 dur = 5;
  repeated Scenario scenarios = 6;

  string nsqServerAddress = 7;
  string nsqLookupAddress = 8;
}

message PerformanceExecResult {
  string uuid = 1;
  int32 vuId = 2;

  string status = 3;
  int64 duration = 4;
  string msg = 5;

  string instruction = 6;
}
